--- a/index.html
+++ b/index.html
@@ -1,86 +1,320 @@
-// Function to get image size
-function getImageSize(imagePath) {
-  return new Promise((resolve, reject) => {
-    const img = new Image();
-    img.onload = function () {
-      const width = img.width;
-      const height = img.height;
-      resolve({ width, height });
-    };
-    img.onerror = function () {
-      reject(new Error('Failed to load image'));
-    };
-    img.src = imagePath;
-  });
-}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Image Conversion and Download</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/css/bootstrap.min.css">
+    <style>
+        .container {
+            max-width: 600px;
+            margin-top: 50px;
+        }
 
-// Function to get image pixels
-function getImagePixels(imagePath) {
-  return new Promise((resolve, reject) => {
-    const img = new Image();
-    img.onload = function () {
-      const canvas = document.createElement('canvas');
-      canvas.width = img.width;
-      canvas.height = img.height;
-      const context = canvas.getContext('2d');
-      context.drawImage(img, 0, 0);
-      const imageData = context.getImageData(0, 0, img.width, img.height);
-      resolve({ width: img.width, height: img.height, pixels: imageData.data });
-    };
-    img.onerror = function () {
-      reject(new Error('Failed to load image'));
-    };
-    img.src = imagePath;
-  });
-}
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
 
-// Function to convert image format
-function convertImageFormat(imagePath, outputFormat, outputQuality = 0.92) {
-  return new Promise((resolve, reject) => {
-    const img = new Image();
-    img.onload = function () {
-      const canvas = document.createElement('canvas');
-      canvas.width = img.width;
-      canvas.height = img.height;
-      const context = canvas.getContext('2d');
-      context.drawImage(img, 0, 0);
-      const newDataURL = canvas.toDataURL(`image/${outputFormat}`, outputQuality);
-      resolve(newDataURL);
-    };
-    img.onerror = function () {
-      reject(new Error('Failed to load image'));
-    };
-    img.src = imagePath;
-  });
-}
+        #image-input {
+            margin-bottom: 15px;
+        }
 
-// Example usage
+        .output-image {
+            max-width: 100%;
+            margin-top: 20px;
+        }
 
-// Get image size
-getImageSize('example.jpg')
-  .then(({ width, height }) => {
-    console.log(`Image size: ${width} x ${height}`);
-  })
-  .catch((error) => {
-    console.error(error);
-  });
+        .download-link {
+            display: block;
+            text-align: center;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Image Conversion and Download</h1>
+        <div class="mb-3">
+            <label for="image-input" class="form-label">Select File:</label>
+            <input type="file" id="image-input" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="photo-type" class="form-label">Photo Type:</label>
+            <select id="photo-type" class="form-select">
+                <option value="passport">Passport</option>
+                <option value="document">Document</option>
+                <option value="custom">Custom</option>
+            </select>
+        </div>
+        <div id="custom-size" style="display: none;">
+            <div class="mb-3">
+                <label for="width-input" class="form-label">Width:</label>
+                <input type="number" id="width-input" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="height-input" class="form-label">Height:</label>
+                <input type="number" id="height-input" class="form-control">
+            </div>
+        </div>
+        <div class="mb-3">
+            <label for="file-format" class="form-label">File Format:</label>
+            <select id="file-format" class="form-select">
+                <option value="jpg">JPG</option>
+                <option value="png">PNG</option>
+                <option value="pdf">PDF</option>
+                <option value="docx">DOCX</option>
+            </select>
+        </div>
+        <button onclick="convertAndDownload()" class="btn btn-primary">Convert and Download</button>
+        <img id="output-image" class="output-image">
+        <a id="download-link" href="#" download class="download-link" style="display: none;">Download Processed File</a>
+    </div>
 
-// Get image pixels
-getImagePixels('example.jpg')
-  .then(({ width, height, pixels }) => {
-    console.log(`Image size: ${width} x ${height}`);
-    console.log(`Pixel at (0, 0): [${pixels[0]}, ${pixels[1]}, ${pixels[2]}, ${pixels[3]}]`);
-  })
-  .catch((error) => {
-    console.error(error);
-  });
+    <script>
+        function convertAndDownload() {
+            var fileInput = document.getElementById('image-input');
+            var file = fileInput.files[0];
+            var reader = new FileReader();
 
-// Convert image format
-convertImageFormat('example.jpg', 'png')
-  .then((newDataURL) => {
-    console.log('Image converted successfully!');
-    console.log('New image data URL:', newDataURL);
-  })
-  .catch((error) => {
-    console.error(error);
-  });
+            reader.onload = function (event) {
+                var img = new Image();
+                img.onload = function () {
+                    var photoType = document.getElementById('photo-type').value;
+                    var width, height;
+
+                    if (photoType === 'passport') {
+                        width = 35;  // Set passport size width in mm
+                        height = 45; // Set passport size height in mm
+                    } else if (photoType === 'document') {
+                        width = 210; // Set document size width in mm
+                        height = 297; // Set document size height in mm
+                    } else if (photoType === 'custom') {
+                        width = parseFloat(document.getElementById('width-input').value);
+                        height = parseFloat(document.getElementById('height-input').value);
+                    }
+
+                    var canvas = document.createElement('canvas');
+                    var ctx = canvas.getContext('2d');
+
+                    var aspectRatio = img.width / img.height;
+                    var targetWidth = width * 3.7795; // Convert mm to pixels at 96dpi
+                    var targetHeight = targetWidth / aspectRatio;
+
+                    canvas.width = targetWidth;
+                    canvas.height = targetHeight;
+                    ctx.drawImage(img, 0, 0, targetWidth, targetHeight);
+
+                    var fileFormat = document.getElementById('file-format').value;
+                    var filename = 'processed_file.' + fileFormat;
+
+                    if (fileFormat === 'pdf' || fileFormat === 'docx') {
+                        convertToDocumentFormat(canvas, fileFormat, filename);
+                    } else {
+                        downloadImage(canvas, fileFormat, filename);
+                    }
+                };
+
+                img.src = event.target.result;
+            };
+
+            reader.readAsDataURL(file);
+        }
+
+        function convertToDocumentFormat(canvas, fileFormat, filename) {
+            canvas.toBlob(function (blob) {
+                var formData = new FormData();
+                formData.append('file', blob, filename);
+
+                var xhr = new XMLHttpRequest();
+                xhr.open('POST', 'convert.php');
+                xhr.onload = function () {
+                    if (xhr.status === 200) {
+                        var downloadLink = document.getElementById('download-link');
+                        downloadLink.href = xhr.responseText;
+                        downloadLink.download = filename;
+                        downloadLink.style.display = 'block';
+                    }
+                };
+                xhr.send(formData);
+            }, 'application/octet-stream');
+        }
+
+        function downloadImage(canvas, fileFormat, filename) {
+            canvas.toBlob(function (blob) {
+                var downloadLink = document.getElementById('download-link');
+                downloadLink.href = URL.createObjectURL(blob);
+                downloadLink.download = filename;
+                downloadLink.style.display = 'block';
+            }, 'image/' + fileFormat);
+        }
+    </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Image Compression and Resolution Adjustment</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/css/bootstrap.min.css">
+    <style>
+        .container {
+            max-width: 600px;
+            margin-top: 50px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        #image-input {
+            margin-bottom: 15px;
+        }
+
+        .custom-size-inputs {
+            display: flex;
+            gap: 10px;
+        }
+
+        .output-size {
+            margin-top: 20px;
+        }
+
+        .output-image {
+            max-width: 100%;
+            margin-top: 20px;
+        }
+
+        .download-link {
+            display: block;
+            text-align: center;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Image Compression and Resolution Adjustment</h1>
+        <div class="mb-3">
+            <label for="image-input" class="form-label">Select Image:</label>
+            <input type="file" id="image-input" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Compression Quality:</label>
+            <input type="number" id="quality-input" min="0" max="1" step="0.1" value="0.8" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Size Option:</label><br>
+            <div class="form-check form-check-inline">
+                <input type="radio" name="size-option" value="passport" checked class="form-check-input">
+                <label class="form-check-label">Passport Size</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input type="radio" name="size-option" value="document" class="form-check-input">
+                <label class="form-check-label">Document Size</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input type="radio" name="size-option" value="custom" class="form-check-input">
+                <label class="form-check-label">Custom Size</label>
+            </div>
+        </div>
+        <div id="custom-size" style="display: none;">
+            <div class="custom-size-inputs">
+                <div class="mb-3">
+                    <label for="width-input" class="form-label">Width:</label>
+                    <input type="number" id="width-input" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="height-input" class="form-label">Height:</label>
+                    <input type="number" id="height-input" class="form-control">
+                </div>
+            </div>
+        </div>
+        <button onclick="processImage()" class="btn btn-primary">Process</button>
+        <p id="output-size" class="output-size"></p>
+        <img id="output-image" class="output-image">
+        <a id="download-link" href="#" download class="download-link" style="display: none;">Download Processed Image</a>
+    </div>
+
+    <script>
+        function processImage() {
+            var fileInput = document.getElementById('image-input');
+            var file = fileInput.files[0];
+            var reader = new FileReader();
+
+            reader.onload = function (event) {
+                var img = new Image();
+                img.onload = function () {
+                    var quality = parseFloat(document.getElementById('quality-input').value) || 0.8;
+                    var sizeOption = document.querySelector('input[name="size-option"]:checked').value;
+                    var width, height;
+
+                    if (sizeOption === 'passport') {
+                        width = 35;  // Set passport size width in mm
+                        height = 45; // Set passport size height in mm
+                    } else if (sizeOption === 'document') {
+                        width = 210; // Set document size width in mm
+                        height = 297; // Set document size height in mm
+                    } else if (sizeOption === 'custom') {
+                        width = parseFloat(document.getElementById('width-input').value);
+                        height = parseFloat(document.getElementById('height-input').value);
+                    }
+
+                    var canvas = document.createElement('canvas');
+                    var ctx = canvas.getContext('2d');
+
+                    var aspectRatio = img.width / img.height;
+                    var targetWidth = width * 3.7795; // Convert mm to pixels at 96dpi
+                    var targetHeight = targetWidth / aspectRatio;
+
+                    canvas.width = targetWidth;
+                    canvas.height = targetHeight;
+                    ctx.drawImage(img, 0, 0, targetWidth, targetHeight);
+
+                    canvas.toBlob(function (blob) {
+                        var downloadLink = document.getElementById('download-link');
+                        downloadLink.href = URL.createObjectURL(blob);
+                        downloadLink.download = 'processed_image.jpg';
+                        downloadLink.style.display = 'block';
+                    }, 'image/jpeg', quality);
+
+                    var outputImage = document.getElementById('output-image');
+                    outputImage.src = canvas.toDataURL('image/jpeg', quality);
+
+                    // Get the size in kilobytes
+                    var sizeInBytes = canvas.toDataURL('image/jpeg', quality).length;
+                    var sizeInKb = (sizeInBytes / 1024).toFixed(2);
+
+                    var outputSize = document.getElementById('output-size');
+                    outputSize.textContent = 'Image Size: ' + sizeInKb + ' KB';
+                };
+
+                img.src = event.target.result;
+            };
+
+            reader.readAsDataURL(file);
+        }
+
+        var sizeOptionRadios = document.querySelectorAll('input[name="size-option"]');
+        var customSizeDiv = document.getElementById('custom-size');
+
+        for (var i = 0; i < sizeOptionRadios.length; i++) {
+            sizeOptionRadios[i].addEventListener('change', function () {
+                if (this.value === 'custom') {
+                    customSizeDiv.style.display = 'block';
+                } else {
+                    customSizeDiv.style.display = 'none';
+                }
+            });
+        }
+
+        // Function to trigger download
+        function downloadImage() {
+            var downloadLink = document.getElementById('download-link');
+            if (downloadLink.href) {
+                var clickEvent = new MouseEvent('click');
+                downloadLink.dispatchEvent(clickEvent);
+            }
+        }
+    </script>
+</body>
+</html>
+
